--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
 # replace with your username:
 name = chaikin
-version = 0.0.1
+version = 0.0.3
 author = Jean Lucas
 author_email = jeanlpf@hotmail.com
-description = "Package for smoothing 2D coordinates using Chaikin's algorithm."
+description = Package for smoothing 2D coordinates using Chaikin's algorithm.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/jean-lucas/chaikin-smoothing
+url = https://github.com/jean-lucas/chaikin
 project_urls =
-    Bug Tracker = https://github.com/jean-lucas/chaikin-smoothing/issues
+    Bug Tracker = https://github.com/jean-lucas/chaikin/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
