--- a/setup.cfg
+++ b/setup.cfg
@@ -1,24 +1,20 @@
+[tool:pytest]
+python_paths = .
+addopts = --cov=chaikin --cov-report term-missing --cov-report html:cov_html
+
+[bdist_wheel]
+universal = 0
+
 [metadata]
 name = chaikin
-version = 0.0.6
+version = 0.0.7
 author = Jean Lucas
 author_email = jeanlpf@hotmail.com
 description = Package for smoothing 2D coordinates using Chaikin's algorithm.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/jean-lucas/chaikin
-project_urls =
-    Bug Tracker = https://github.com/jean-lucas/chaikin/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-
-[options]
-package_dir =
-    = src
-packages = find:
-python_requires = >=3.6
-
-[options.packages.find]
-where = src
